@@ -6,6 +6,7 @@
  */
 
 #include <lsp-plug.in/lltl/phashset.h>
+#include <lsp-plug.in/common/debug.h>
 
 namespace lsp
 {
